<resources>
    <string name="app_name">Firebase OC</string>

    <string name="main_activity_description">Discute avec tes mentors, tout simplement.</string>

    <string name="login">Connexion</string>
    <string name="groups">Discussions</string>
    <string name="chat_with_mentor">Discute avec un mentor</string>

    <string name="addGroup">+</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>
    <string name="toolbar_title_groups_activity">Liste des groupes</string>

    <string name="toolbar_title_planning_poker">Planning Poker</string>

    <string name="btn0">0</string>
    <string name="btn05">0.5</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn5">5</string>
    <string name="btn8">8</string>
    <string name="btn13">13</string>
    <string name="btn20">20</string>
    <string name="btn40">40</string>
    <string name="btn100">100</string>
    <string name="btnInterrogation">\?</string>
    <string name="btnUsSuivante">US Suivante</string>

    <string name="text_view_group">Ce fil de discussion ne contient pour le moment aucun salon…</string>
    <string name="main_descryption">Ton planning poker en toute simplicité !</string>
    <string name="app_name2">Scrum Poker</string>
    <string name="nom_us">En attente d\'US du scrum master...</string>
    <string name="text_copy_button">Clé du salon</string>
    <string name="Text_add_group">Ajouter un salon</string>
    <string name="text_add_button">Ajouter</string>
    <string name="change_name">Changer de nom</string>

    <string name="btnModifReponse">Modifier ma réponse</string>
    <string name="nbMembres"></string>
    <string name="TextColonneUS">Nom de l\'US</string>
    <string name="TextColonneNote">Point US</string>
    <string name="text_list_us">Récapitulatif</string>


</resources>