<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- IMAGE VIEW FIREBASE OC -->
    <ImageView
        android:layout_width="209dp"
        android:layout_height="201dp"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/ic_logo_fire" />

    <!-- TITLE FIREBASE OC -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/app_name2"
        android:textSize="@dimen/default_title_size"
        android:textStyle="bold" />

    <!-- DESCRIPTION FIREBASE OC -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/main_descryption"
        android:textSize="@dimen/default_text_size" />

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_large_margin"
        android:gravity="center"
        android:orientation="vertical">

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/groupButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_large_margin"
            android:text="@string/groups"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON CHAT -->
        <Button
            android:id="@+id/loginButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/round_rectangle_blue"
            android:padding="@dimen/default_large_margin"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>
