<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layouttop"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layouttop2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ic_item_group"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/TextColonneUS"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="70dp"
                android:background="@drawable/round_rect_shape"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/Usnote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/TextColonneNote"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutbot"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_below="@+id/layouttop"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/emptyRecyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:text="@string/text_view_group"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listeResultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>