<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">


        <!-- PROFILE USERNAME -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            app:srcCompat="@drawable/ic_logo_fire" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="243dp"
            android:layout_height="192dp"
            app:srcCompat="@drawable/ic_anon_user_48dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="sans-serif-light"
            android:minHeight="48dp"
            android:text="@string/text_input_username"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- PROFILE EMAIL CONTAINER -->

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/default_margin"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size" />

        <!-- CHECKBOX IS USER MENTOR -->


    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!-- BUTTON UPDATE USERNAME -->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="5dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_item_group"
            android:gravity="top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="top"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_margin"
            android:text="@string/change_name"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/signOutButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/mr_cast_progressbar_background_dark"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_error_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>
